# aximobility-blockchain

./: .env.example  .gitignore  .prettierignore  .prettierrc.js  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  hardhat.config.ts  package.json  tsconfig.json
contracts/fare-calculator/: FareCalculator.sol
contracts/ink/: Cargo.toml
contracts/ink/did_registry/: Cargo.toml  lib.rs
contracts/ink/telemetry_processor/: Cargo.toml  lib.rs
contracts/ink/vehicle_registry/: Cargo.toml  lib.rs
scripts/: check-balances.ts  fix-dependencies.sh
scripts/deploy/: ink.sh  local.ts  solidity.ts
scripts/setup/: evm-wallets.ts  ink.sh  wallets.ts
src/: app.controller.ts  app.service.ts
src/blockchain/: blockchain.module.ts
src/blockchain/contracts/: contract.service.ts  contracts.module.ts
src/blockchain/did/: did.module.ts
src/blockchain/peaq/: peaq.module.ts
src/common/filters/: global-exception.filter.ts
src/common/interceptors/: logging.interceptor.ts  response.interceptor.ts
src/common/types/: index.ts
src/config/: configuration.ts  validation.schema.ts
src/database/: database.module.ts
src/database/entities/: blockchain-transaction.entity.ts  index.ts  sensor-identity.entity.ts  telemetry-data.entity.ts  vehicle-identity.entity.ts
src/health/: health.module.ts
src/telemetry/: telemetry.module.ts  telemetry.service.ts
test/: setup.ts
test/contracts/: FareCalculator.test.ts
test/e2e/: tranche1-workflow.e2e-spec.ts
test/integration/: setup.ts
test/integration/blockchain/: peaq-integration.spec.ts  telemetry-integration.spec.ts
(+5 files in other folders)
